# Final-Project

./: .coverage  .gitignore  .pre-commit-config.yaml  PushTest.py  README.md  pyproject.toml
.github/workflows/: CI.yaml
cookiecutter_output/: .pre-commit-config.yaml
cookiecutter_output/.github/: pull_request_template.md
cookiecutter_output/docs/: notebooks.rst
cookiecutter_output/docs/notebooks/: 1_demo_notebook.ipynb
cookiecutter_output/numpy/: my_module.py
cookiecutter_output/test_numpy/: basic_test.py
data/csv/: language_names.csv
docs/: conf.py  index.rst  numpy.rst
numpy/: main_nicegui.py  main_qt.py
pokedex/: main_nicegui.py  main_qt.py  my_module.py
test_pokedex/: basic_test.py
